# fastapi_test_project03

./: .gitignore  alembic.ini  main.py  myapp.db  note.txt  pyproject.toml
alembic/data/: students.json
alembic/versions/: 768d43bde052_.py  9188f321ed5c_moving_is_active_to_user_table.py  d23e2afe2290_.py
api/: courses.py  sections.py  users.py
api/crud/: users.py
db/: db_setup.py
db/models/: user.py
