[tool.poetry]
name = "fastapi-test-project03"
version = "0.1.0"
description = ""
authors = ["ark948 <armankarimi948@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
